# Fake-Link-25Sep-VacationWork-

./: .gitignore  CMakeLists.txt  README.md  Resources.qrc  main.cpp  playerui.cpp  playerui.h  playerui.ui
Fake-Link/: CMakeLists.txt  Direction.txt  Resources.qrc  app.aps  app.rc  developingDiary.txt  gameSettings.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  pausedialog.cpp  pausedialog.h  pausedialog.ui  playercharacter.cpp  playercharacter.h  playerui.cpp  playerui.h  playerui.ui  scoreboard.cpp  scoreboard.h  settings.cpp  settings.h  settings.ui  simpletest.cpp  simpletest.h
